getLoad and set from localstorage, clearItems, basic app functionalities are done.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
             </div>
 
             <ul class="collection">
-              <li class="collection-item">
+              <div class="card-content empty">
+                Your list is empty!
+              </div>
+              <!-- <li class="collection-item">
                 First Item                
                 <a href="#" class="delete-item secondary-content">
                   <i class="fa fa-remove"></i>
@@ -82,7 +85,7 @@
                 <a href="#" class="done-item secondary-content ">
                   <i class="fa fa-check"></i>
                 </a>
-              </li>             
+              </li>              -->
             </ul>
             <a class="clear-items btn pink accent-1" href="#">Clear Items</a>
           </div><!-- card-action -->
